# obj_detection_tut

./: Post_Pre_summary.odt
C++/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  boxes.txt  boxess.txt  cmake_install.cmake  main  main.cpp
C++/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
C++/lib/: image_processing.cpp  nms.cpp
C++/old/: cvnms.cpp  image_processing.cpp  lib.hpp  nms.cpp
Testing/: check.cpp  inference_test.py  nms.cpp  post_test.py  ref.py  test.cpp  test.py
python/: capture.py  detect.py  img_processor.py  main.py  model.py
ref/: nms.hpp  refnms.cpp
