cmake_minimum_required(VERSION 2.8.12)
project(main) 
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/lib )
add_executable(  main main.cpp ${CMAKE_SOURCE_DIR}/lib/nms.cpp ${CMAKE_SOURCE_DIR}/lib/image_processing.cpp )
target_link_libraries( main   ${OpenCV_LIBS} )
# include_directories( main ${CMAKE_SOURCE_DIR}/lib)